version 2.3.1 - fixed return button on mobile

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -64,7 +64,7 @@ h2 a {
 }
 
 #navReturnButton {
-  right: 5%;
+  left: 5%;
   bottom: 5%;
   font-size: 3em;
   border-radius: 50%;
